--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@ permalink: /
 <div id="main">
 <div class="w3-teal">
   <button id="openNav" class="w3-button w3-teal w3-xlarge" onclick="w3_open()">&#9776;</button>
-  <div class="w3-container">
+  <div class="w3-container" style="background-color: black">
     <h1>My Page</h1>
   </div>
 </div>
