--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@ permalink: /
 </div>
 <div id="main">
 <div class="w3-teal"  style = " background-color: black;">
-  <button id="openNav" class="w3-button w3-teal w3-xlarge" onclick="w3_open()">&#9776;</button>
+  <button id="openNav" class="w3-button w3-teal w3-xlarge" onclick="w3_open()"  style = "background-color: black;">&#9776;</button>
   <div class="w3-container"  style = " background-color: black;">
     <h1>My Page</h1>
   </div>
