--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@ permalink: /
 <div id="main">
 <div class="w3-teal"  style = " background-color: black;">
   <button id="openNav" class="w3-button w3-teal w3-xlarge" onclick="w3_open()"  style = "background-color: black;">&#9776;</button>
-  <div class="w3-container"  style = " background-color: black;">
+  <div class="w3-container"  >
     <h1>My Page</h1>
   </div>
 </div>
