--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@ permalink: /
   <a href="#" class="w3-bar-item w3-button">Link 3</a>
 </div>
 <div id="main">
-<div class="w3-teal">
+<div class="w3-teal" style = " background-color: black;">
   <button id="openNav" class="w3-button w3-teal w3-xlarge" onclick="w3_open()">&#9776;</button>
   <div class="w3-container">
     <h1>My Page</h1>
