--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@ permalink: /
   <a href="#" class="w3-bar-item w3-button">Link 2</a>
   <a href="#" class="w3-bar-item w3-button">Link 3</a>
 </div>
-<div id="main" style="background-color: black;">
+<div id="main">
 <div class="w3-teal">
   <button id="openNav" class="w3-button w3-teal w3-xlarge" onclick="w3_open()">&#9776;</button>
   <div class="w3-container" style="background-color: black;">
