--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@ permalink: /
 <body>
   <div class="w3-sidebar w3-bar-block w3-card w3-animate-left" style="display:none" id="mySidebar">
   <button class="w3-bar-item w3-button w3-large" onclick="w3_close()">Close &times;</button>
-  <img src="/imgs/my_face.jpg" alt="Car" style="width:100%">
+  <img src="/imgs/my_face.jpg" alt="Car" style="margin-left:11%; margin-top:11%;margin-bottom:11%;width:100%;">
   <a href="#" class="w3-bar-item w3-button">Link 1</a>
   <a href="#" class="w3-bar-item w3-button">Link 2</a>
   <a href="#" class="w3-bar-item w3-button">Link 3</a>
