--- a/_draft/categories.html
+++ b/_draft/categories.html
@@ -25,7 +25,7 @@ permalink: /
   <img src="/imgs/my_face.jpg" alt="Car" style="margin-left:12%;margin-right:12%; margin-top:9%;margin-bottom:9%;width:76%;">
   <a href="#" class="w3-bar-item w3-button">Home</a>
   <a href="#" class="w3-bar-item w3-button">Contents</a>
-  <a href="categories.html" class="w3-bar-item w3-button">Categories</a>
+  <a href="/_draft/categories.html" class="w3-bar-item w3-button">Categories</a>
   <a href="#" class="w3-bar-item w3-button">About</a>
 </div>
 <div id="main">
