--- a/index.html
+++ b/index.html
@@ -20,13 +20,16 @@ permalink: /
 </head>
 
 <body>
+  {% for post in paginator.posts %}
   <div class="w3-sidebar w3-bar-block w3-card w3-animate-left" style="display:none" id="mySidebar">
   <button class="w3-bar-item w3-button w3-large" onclick="w3_close()">Close &times;</button>
   <img src="/imgs/my_face.jpg" alt="Car" style="margin-left:12%;margin-right:12%; margin-top:9%;margin-bottom:9%;width:76%;">
   <a href="#" class="w3-bar-item w3-button">Home</a>
   <a href="#" class="w3-bar-item w3-button">Contents</a>
   <a href="_draft/categories.html" class="w3-bar-item w3-button">Categories</a>
+  <h1><a href="{{ post.url }}">{{ post.title }}</a></h1>
   <a href="#" class="w3-bar-item w3-button">About</a>
+  {% endfor %}
 </div>
 <div id="main">
 <div class="w3-teal" style="background-color: black;">
