--- a/news.html
+++ b/news.html
@@ -7,7 +7,8 @@ layout: default
 <ul>
   {% for news in site.categories.news %}
     <li>
-      <a href="">{{news.title}}</a>
+      <a href="#">{{news.title}}</a>
       <p>{{news.meta}}</p>
     </li>
   {% endfor %}
+</ul>
