--- a/news.html
+++ b/news.html
@@ -5,7 +5,7 @@ layout: default
 <h1>News</h1>
 
 <ul>
-  {% for news in site.categories.news %}
+  {% for news in site.posts %}
     <li>
       <a href="#">{{news.title}}</a>
       <p>{{news.meta}}</p>
