--- a/_posts/next.html
+++ b/_posts/next.html
@@ -1,7 +1,7 @@
 ---
 layout: default
-title: 테스트하는 겁니다~
-meta: 어떤식으로 나오는지 확인해야해서 봐야겠습니다.
+title: 테스트가 필요해
+meta: 조금 알아봐야하는데...
 category: news
 ---
 <head>
