--- a/_posts/R/2018-05-11-water-in-martian-dirt.html
+++ b/_posts/R/2018-05-11-water-in-martian-dirt.html
@@ -6,11 +6,9 @@ category: R
 ---
 <!doctype html>
 <html>
-<head>
-  <meta charset="utf-8"/>
     <link rel="stylesheet" href="//cdnjs.cloudflare.com/ajax/libs/highlight.js/9.12.0/styles/atom-one-dark.min.css">
     <script src="//cdnjs.cloudflare.com/ajax/libs/highlight.js/9.12.0/highlight.min.js"></script>
-    <script>hljs.initHighlightingOnLoad();</script></head>
+    <script>hljs.initHighlightingOnLoad();</script>
   <body>
     <a class="custom" style="font-size:30px;">
   R에서 "factor"는 범주형 변수(벡터) or 비연속적 변수(벡터)를 지칭합니다. 인자 벡터는 문자열 벡터로부터 또는 수치형 벡터로부터 생성될 수 있습니다.
