--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@ layout: default
         {% if site.avatar %}<img src="{{ site.avatar_img_path }}" id="avatar"> {% endif %}
         <h1>{{ site.name }}</h1>
         <h3>{{ site.description }}</h3>
-        <ul>
+        <ul style="text-align:center">
         {% if site.github_username %}
           <li><a class="fa fa-2x fa-github" href="https://github.com/{{ site.github_username }}"><span class="description">GitHub</span></a></li>
           {% endif %} {% if site.codepen_username %}
