--- a/_posts/TCP_dump/2018-05-14-Packet Analysis.html
+++ b/_posts/TCP_dump/2018-05-14-Packet Analysis.html
@@ -1,7 +1,7 @@
 ---
 layout: post
 title: TCPdump
-meta: ÆÐÅ¶ ºÐ¼®
+meta: íŒ¨í‚· ë¶„ì„
 category: R
 comments: true
 ---
@@ -23,9 +23,9 @@ comments: true
   <body>
     <h3>R Data structure</h3>
     <a class="custom" style="font-size:24px;background-color: transparent;">
-      R¿¡¼­ "factor"´Â ¹üÁÖÇü º¯¼ö(º¤ÅÍ) or ºñ¿¬¼ÓÀû º¯¼ö(º¤ÅÍ)¸¦ ÁöÄªÇÕ´Ï´Ù. ÀÎÀÚ º¤ÅÍ´Â ¹®ÀÚ¿­ º¤ÅÍ·ÎºÎÅÍ ¶Ç´Â ¼öÄ¡Çü º¤ÅÍ·ÎºÎÅÍ »ý¼ºµÉ ¼ö ÀÖ½À´Ï´Ù.
-      "factor"´Â ¹üÁÖÇü µ¥ÀÌÅÍ¸¦ Ç¥ÇöÇÏ´Âµ¥ »ç¿ëµË´Ï´Ù. ¹üÁÖÇü µ¥ÀÌÅÍ´Â À¯ÇÑÇÑ ¼öÀÇ ¹üÁÖ or °íÀ¯ ±×·ìÀÌ Æ÷ÇÔµË´Ï´Ù. ¹üÁÖÇü µ¥ÀÌÅÍ¿¡´Â ³í¸®Àû ¼ø¼­°¡ ¾øÀ» ¼öµµ ÀÖ½À´Ï´Ù. 
-      ¿¹¸¦ µé¾î, ¼ºº°, Àç·á, À¯Çü, °áÁ¦ ¹æ¹ýÀÌ ÀÌ¿¡ ÇØ´çµË´Ï´Ù. ¼öÄ¡Çü º¤ÅÍ·Î »ý¼ºµÈ "factor"´Â levelÀ¸·Î ¾Ë·ÁÁø »çÀü¿¡ Á¤ÀÇµÈ ÁýÇÕ°ª¸¸ ´ãÀ» ¼ö ÀÖ´Ù.<br>
+      Rì—ì„œ "factor"ëŠ” ë²”ì£¼í˜• ë³€ìˆ˜(ë²¡í„°) or ë¹„ì—°ì†ì  ë³€ìˆ˜(ë²¡í„°)ë¥¼ ì§€ì¹­í•©ë‹ˆë‹¤. ì¸ìž ë²¡í„°ëŠ” ë¬¸ìžì—´ ë²¡í„°ë¡œë¶€í„° ë˜ëŠ” ìˆ˜ì¹˜í˜• ë²¡í„°ë¡œë¶€í„° ìƒì„±ë  ìˆ˜ ìžˆìŠµë‹ˆë‹¤.
+      "factor"ëŠ” ë²”ì£¼í˜• ë°ì´í„°ë¥¼ í‘œí˜„í•˜ëŠ”ë° ì‚¬ìš©ë©ë‹ˆë‹¤. ë²”ì£¼í˜• ë°ì´í„°ëŠ” ìœ í•œí•œ ìˆ˜ì˜ ë²”ì£¼ or ê³ ìœ  ê·¸ë£¹ì´ í¬í•¨ë©ë‹ˆë‹¤. ë²”ì£¼í˜• ë°ì´í„°ì—ëŠ” ë…¼ë¦¬ì  ìˆœì„œê°€ ì—†ì„ ìˆ˜ë„ ìžˆìŠµë‹ˆë‹¤. 
+      ì˜ˆë¥¼ ë“¤ì–´, ì„±ë³„, ìž¬ë£Œ, ìœ í˜•, ê²°ì œ ë°©ë²•ì´ ì´ì— í•´ë‹¹ë©ë‹ˆë‹¤. ìˆ˜ì¹˜í˜• ë²¡í„°ë¡œ ìƒì„±ëœ "factor"ëŠ” levelìœ¼ë¡œ ì•Œë ¤ì§„ ì‚¬ì „ì— ì •ì˜ëœ ì§‘í•©ê°’ë§Œ ë‹´ì„ ìˆ˜ ìžˆë‹¤.<br>
       <pre>
       <code class="html" style="font-size:18px">
         <script type="text/javascript">
@@ -49,20 +49,20 @@ comments: true
       <iframe src="/asset/r/factor_1.JPG" scrolling="auto" width=100% height="auto" marginwidth=0 marginheight=0 frameborder=0></iframe>
     <br>
     <br>
-  table() ÇÔ¼ö´Â ºóµµÇ¥¸¦ ¸¸µé¾î ³À´Ï´Ù. addmargins() ÇÔ¼ö´Â ºóµµÇ¥ÀÇ ÁÖº¯ ÇÕÀ» Å×ÀÌºí¿¡ Ãß°¡ÇÕ´Ï´Ù.<br>
+  table() í•¨ìˆ˜ëŠ” ë¹ˆë„í‘œë¥¼ ë§Œë“¤ì–´ ëƒ…ë‹ˆë‹¤. addmargins() í•¨ìˆ˜ëŠ” ë¹ˆë„í‘œì˜ ì£¼ë³€ í•©ì„ í…Œì´ë¸”ì— ì¶”ê°€í•©ë‹ˆë‹¤.<br>
     <iframe src="/asset/r/factor_2.JPG" scrolling="auto" width=50% height="auto" marginwidth=0 marginheight=0 frameborder=0></iframe>
     <iframe src="/asset/r/factor_3.JPG" scrolling="auto" width=50% height="auto" marginwidth=0 marginheight=0 frameborder=0></iframe>
     <br>
     <br>
-  tapply(x, f, function)´Â x¸¦ fÀÇ ¼öÁØ º°·Î ÂÉ°³¼­ functionÀ» Àû¿ëÇÕ´Ï´Ù.<br>
-sppaly()¿Í split()Àº ÂÉ°·ÀÇ ´ë»óÀÌ º¤ÅÍ°¡ ¾Æ´Ï¶ó µ¥ÀÌÅÍ ÇÁ·¹ÀÓÀÎ °æ¿ì¿¡ »ç¿ëÇÑ´Ù.<br>
+  tapply(x, f, function)ëŠ” xë¥¼ fì˜ ìˆ˜ì¤€ ë³„ë¡œ ìª¼ê°œì„œ functionì„ ì ìš©í•©ë‹ˆë‹¤.<br>
+sppaly()ì™€ split()ì€ ìª¼ê°¬ì˜ ëŒ€ìƒì´ ë²¡í„°ê°€ ì•„ë‹ˆë¼ ë°ì´í„° í”„ë ˆìž„ì¸ ê²½ìš°ì— ì‚¬ìš©í•œë‹¤.<br>
     <iframe src="/asset/r/factor_4.JPG" scrolling="auto" width=100% marginwidth=0 marginheight=0 frameborder=0></iframe>
     <br>
     <br>
-  aggregate(x,list(f,g),function)Àº x(º¤ÅÍ or dataframe)¸¦ f¿Í gÀÇ Á¶ÇÕÀ¸·Î ÂÉ°³¼­ functionÀ» Àû¿ëÇÕ´Ï´Ù. Áï, Á¾ÇÕÇÏ°í Áý°èÇÕ´Ï´Ù.
+  aggregate(x,list(f,g),function)ì€ x(ë²¡í„° or dataframe)ë¥¼ fì™€ gì˜ ì¡°í•©ìœ¼ë¡œ ìª¼ê°œì„œ functionì„ ì ìš©í•©ë‹ˆë‹¤. ì¦‰, ì¢…í•©í•˜ê³  ì§‘ê³„í•©ë‹ˆë‹¤.
     <br>
-  cut(x, 0:10)Àº º¤ÅÍ x¸¦ 0:10·Î ÂÉ°³¼­ factor º¯¼ö·Î ¸¸µå´Â, ¼ÒÀ§ ±¸°£È­(binning)À» ÇÕ´Ï´Ù. 
-      (x,y)ÀÇ »êÁ¡µµ¿¡ xÀÇ ±¸°£º° Æò±ÕÀ» ¸·´ë·Î ³Ö¾î ±¸°£º° Æò±ÕÀÇ ÀÌµ¿À» »êÃâÇÏ´Â R ½ºÅ©¸³Æ®ÀÔ´Ï´Ù.
+  cut(x, 0:10)ì€ ë²¡í„° xë¥¼ 0:10ë¡œ ìª¼ê°œì„œ factor ë³€ìˆ˜ë¡œ ë§Œë“œëŠ”, ì†Œìœ„ êµ¬ê°„í™”(binning)ì„ í•©ë‹ˆë‹¤. 
+      (x,y)ì˜ ì‚°ì ë„ì— xì˜ êµ¬ê°„ë³„ í‰ê· ì„ ë§‰ëŒ€ë¡œ ë„£ì–´ êµ¬ê°„ë³„ í‰ê· ì˜ ì´ë™ì„ ì‚°ì¶œí•˜ëŠ” R ìŠ¤í¬ë¦½íŠ¸ìž…ë‹ˆë‹¤.
     <br>
       <pre>
       <code class="html" style="font-size:18px">
