--- a/_posts/Network/TCP_dump/2018-05-31-Packet Analysis.html
+++ b/_posts/Network/TCP_dump/2018-05-31-Packet Analysis.html
@@ -27,8 +27,8 @@ comments: true
       </br>
       </br>
       <h2>TCPdump option</h2>
-      <iframe src="/asset/TD_img/manual.JPG" scrolling="auto" width=100% height=20% frameborder=0></iframe>
-      <iframe src="/asset/TD_img/option.JPG" scrolling="auto" width=100% height=25% frameborder=0></iframe>
+      <iframe src="/asset/Network/TCPDump/manual.JPG" scrolling="auto" width=100% height=20% frameborder=0></iframe>
+      <iframe src="/asset/Network/TCPDump/option.JPG" scrolling="auto" width=100% height=25% frameborder=0></iframe>
       <h2>ARP</h2>
       <p style="font-size:15px">
         1) IP 주소에 대응되는 이더넷카드의 하드웨어 주소(MAC주소)를 알아내는 프로토콜</br>
@@ -52,7 +52,7 @@ comments: true
         3) ARP Cache 정보 저장 시간은 일반적으로 2분 동안 저장</br>
         4) 2분 이내 다시 통신이 일어나면 10분으로 Cache 저장 시간을 늘림</br>
       </p>
-      <iframe src="/asset/TD_img/ARP.JPG" scrolling="auto" width=100% height=60% frameborder=0></iframe>
+      <iframe src="/asset/Network/TCPDump/ARP.JPG" scrolling="auto" width=100% height=60% frameborder=0></iframe>
       <h2>ICMP</h2>
       <p style="font-size:15px">
         - IP프로토콜은 송신시스템과 수신시스템사이의 패킷을 최적의 경로를 통해 전달하는것이 주된 목적</br>
@@ -65,9 +65,9 @@ comments: true
         - 오류보고메시지(Error Reporting Message) : IP Packet처리 도중 발생한 문제 보고</br>
         - 질의 메시지(Query Message) : 다른 호스트로부터 특정 정보 획득, 네트워크 문제 진단</br>
       </p>
-      <iframe src="/asset/TD_img/ICMP.JPG" scrolling="auto" width=100% height=60% frameborder=0></iframe>
+      <iframe src="/asset/Network/TCPDump/ICMP.JPG" scrolling="auto" width=100% height=60% frameborder=0></iframe>
       <h2>MAC + ICMP</h2>
-      <iframe src="/asset/TD_img/MAC+ICMP.JPG" scrolling="auto" width=100% height=60% frameborder=0></iframe>
+      <iframe src="/asset/Network/TCPDump/MAC+ICMP.JPG" scrolling="auto" width=100% height=60% frameborder=0></iframe>
       <h2>IP 대역별 정보</h2>
       <p style="font-size:15px">
         - 총 4바이트, 4개의 옥텟fh, " . " 기준을 옥텟 구성</br>
@@ -83,13 +83,13 @@ comments: true
         -데이터그램 분할 및 재조립</br>
         -흐름제어 및 오류제어의 기능 없음</br>
       </p>
-      <iframe src="/asset/TD_img/IP.JPG" scrolling="auto" width=100% height=60% frameborder=0></iframe>
+      <iframe src="/asset/Network/TCPDump/IP.JPG" scrolling="auto" width=100% height=60% frameborder=0></iframe>
       <h2>소스 목적지 대역별 정보</h2>
-      <iframe src="/asset/TD_img/소스 및 목적지 별.JPG" scrolling="auto" width=100% height=60% frameborder=0></iframe>
+      <iframe src="/asset/Network/TCPDump/소스 및 목적지 별.JPG" scrolling="auto" width=100% height=60% frameborder=0></iframe>
       <h2>Syn과 Syn-ack</h2>
-      <iframe src="/asset/TD_img/syn 과 syn ack.JPG" scrolling="auto" width=100% height=60% frameborder=0></iframe>
+      <iframe src="/asset/Network/TCPDump/syn 과 syn ack.JPG" scrolling="auto" width=100% height=60% frameborder=0></iframe>
       <h2>Reset/Push/Fin</h2>
-      <iframe src="/asset/TD_img/Reset_Push_Fin.JPG" scrolling="auto" width=100% height=60% frameborder=0></iframe>
+      <iframe src="/asset/Network/TCPDump/Reset_Push_Fin.JPG" scrolling="auto" width=100% height=60% frameborder=0></iframe>
       <h2>UDP</h2>
       <p style="font-size:15px">
         UDP란?</br>
@@ -99,13 +99,13 @@ comments: true
         - TCP와 같은 윈도우를 이용한 흐름제어 불가</br>
         - Checksum값을 통한 제어 이외의 오류 제어 기능은 미비함</br>
       </p>
-      <iframe src="/asset/TD_img/UDP.JPG" scrolling="auto" width=100% height=60% frameborder=0></iframe>
+      <iframe src="/asset/Network/TCPDump/UDP.JPG" scrolling="auto" width=100% height=60% frameborder=0></iframe>
       <h2>VRRP</h2>
-      <iframe src="/asset/TD_img/VRRP.JPG" scrolling="auto" width=100% height=60% frameborder=0></iframe>
+      <iframe src="/asset/Network/TCPDump/VRRP.JPG" scrolling="auto" width=100% height=60% frameborder=0></iframe>
       <h2>Multicast</h2>
-      <iframe src="/asset/TD_img/Multicast.JPG" scrolling="auto" width=100% height=60% frameborder=0></iframe>
+      <iframe src="/asset/Network/TCPDump/Multicast.JPG" scrolling="auto" width=100% height=60% frameborder=0></iframe>
       <h2>Broadcast</h2>
-      <iframe src="/asset/TD_img/Broadcast.JPG" scrolling="auto" width=100% height=60% frameborder=0></iframe>
+      <iframe src="/asset/Network/TCPDump/Broadcast.JPG" scrolling="auto" width=100% height=60% frameborder=0></iframe>
     </a>
     <!--#################################################################################################-->
   </body>
