--- a/_posts/Daily/RoadMap/2018-12-16-PersonalRoadMap.html
+++ b/_posts/Daily/RoadMap/2018-12-16-PersonalRoadMap.html
@@ -1,4 +1,4 @@
----
+--
 layout: post
 title: 2018 Roadmap - Personal Roadmap
 meta: Daily
@@ -53,13 +53,36 @@ posting한곳: Posting <blockquote><p class="posting">포스팅 </p></blockquote
 	<h1 class="BasicFontSet">Web Developer Roadmap</h1>
 	<h2 class="BasicFontSet">Front End Roadmap</h2>
 	<img src="/asset/Daily/RoadMap/frontend.png" class="concept">
-	<p class="Paragraph"></p>
+	<p class="Paragraph">내가 선택한 Front-end</p>
+	HTML -> CSS -> JavaScript -> 반응형 웹 사이트 -> Sass,PostCSS -> Bootstrap -> BEM(CSS 아키텍쳐) -> NPM Script, Webpack -> React, Angular & Vue(프레임워크)
 	<h2 class="BasicFontSet">Back End Roadmap</h2>
 	<img src="/asset/Daily/RoadMap/backend.png" class="concept">
-	<p class="Paragraph"></p>
+	<p class="Paragraph">내가 선택한 Back-end</p>
+	Python, Nodejs -> JSON 활용 -> 패키지 매니저 -> Standard 및 Practice -> 패키지와 라이브러리를 만들어 배포-> 관계형 데이터베이스 배우기(MySQL, MariaDB, PostgreSQL) -> 간단한 애플리케이션(가입, 로그인, CRUD) 게시물 작성, 업데이트 및 삭제-> NoSQL(MongoDB) -> 캐싱 -> RESTful APIs -> Authentication/Authorization 방법론 -> Kafka(메세지 브로커)-> ElasticSearch(검색엔진) -> Docker -> Apache,NginX(앱 서버) -> 웹 소켓 -> GraphQL
 	<h2 class="BasicFontSet">DevOps Roadmap</h2>
 	<img src="/asset/Daily/RoadMap/devops.png" class="concept">
-	<p class="Paragraph"></p>
+	<p class="Paragraph">내가 선택한 Dev-Ops</p>
+운영체제: Linux, FreeBSD</br>
+클라우드: AWS</br>
+자동화: AWS Cloud</br>
+지속적인 배포/통합(???): Jenkins, Travis, CircleCI</br>
+모니터링과 경보(???): AppDymamics</br>
+Log Management & Analysis: ELIK</br>
+컨테이너: Docker</br>
+웹 서버: Apache, NginX</br>
+클러스터 매니저: Kubernetes Docker Swarm</br>
+터미널:</br>
+	소스에서 앱 컴파일하기 (gcc, make)</br>
+	Bash Script</br>
+	Vim</br>
+OSI Model. TCP/IP/UDP 공통 포트</br>
+다른 파일 시스템에 대한 지식</br>
+역방향 프록시 설정(NginX)</br>
+캐시 서버 설정 (NginX)</br>
+로드 밸런서 서버 설정 (HAProxy, NginX)</br>
+방화벽 설정</br>
+SSL, HTTPS</br>
+좋지 않은 문제 발생시의 사후 분석</br>
 	<blockquote><p class="Reference">출처: <a class="Reference"> https://github.com/devJang/developer-roadmap</a></p>
      </a>
   </body>
