--- a/_posts/Daily/RoadMap/2018-12-16-PersonalRoadMap.html
+++ b/_posts/Daily/RoadMap/2018-12-16-PersonalRoadMap.html
@@ -54,11 +54,11 @@ posting한곳: Posting <blockquote><p class="posting">포스팅 </p></blockquote
 	<h2 class="BasicFontSet">Front End Roadmap</h2>
 	<img src="/asset/Daily/RoadMap/frontend.png" class="concept">
 	<p class="Paragraph">내가 선택한 Front-end</p>
-	HTML -> CSS -> JavaScript -> 반응형 웹 사이트 -> Sass,PostCSS -> Bootstrap -> BEM(CSS 아키텍쳐) -> NPM Script, Webpack -> React, Angular & Vue(프레임워크)
+	HTML - CSS - JavaScript - 반응형 웹 사이트 - Sass,PostCSS - Bootstrap - BEM(CSS 아키텍쳐) - NPM Script, Webpack - React, Angular, Vue(프레임워크)
 	<h2 class="BasicFontSet">Back End Roadmap</h2>
 	<img src="/asset/Daily/RoadMap/backend.png" class="concept">
 	<p class="Paragraph">내가 선택한 Back-end</p>
-	Python, Nodejs -> JSON 활용 -> 패키지 매니저 -> Standard 및 Practice -> 패키지와 라이브러리를 만들어 배포-> 관계형 데이터베이스 배우기(MySQL, MariaDB, PostgreSQL) -> 간단한 애플리케이션(가입, 로그인, CRUD) 게시물 작성, 업데이트 및 삭제-> NoSQL(MongoDB) -> 캐싱 -> RESTful APIs -> Authentication/Authorization 방법론 -> Kafka(메세지 브로커)-> ElasticSearch(검색엔진) -> Docker -> Apache,NginX(앱 서버) -> 웹 소켓 -> GraphQL
+	Python, Nodejs - JSON 활용 - 패키지 매니저 - Standard 및 Practice - 패키지와 라이브러리를 만들어 배포- 관계형 데이터베이스 배우기(MySQL, MariaDB, PostgreSQL) - 간단한 애플리케이션(가입, 로그인, CRUD) 게시물 작성, 업데이트 및 삭제- NoSQL(MongoDB) - 캐싱 - RESTful APIs - Authentication/Authorization 방법론 - Kafka(메세지 브로커)- ElasticSearch(검색엔진) - Docker - Apache,NginX(앱 서버) - 웹 소켓 - GraphQL
 	<h2 class="BasicFontSet">DevOps Roadmap</h2>
 	<img src="/asset/Daily/RoadMap/devops.png" class="concept">
 	<p class="Paragraph">내가 선택한 Dev-Ops</p>
@@ -67,7 +67,7 @@ posting한곳: Posting <blockquote><p class="posting">포스팅 </p></blockquote
 자동화: AWS Cloud</br>
 지속적인 배포/통합(???): Jenkins, Travis, CircleCI</br>
 모니터링과 경보(???): AppDymamics</br>
-Log Management & Analysis: ELIK</br>
+Log Management, Analysis: ELIK</br>
 컨테이너: Docker</br>
 웹 서버: Apache, NginX</br>
 클러스터 매니저: Kubernetes Docker Swarm</br>
