--- a/_posts/Analysis/2018-12-17-DOMCSSOMOptimization.html
+++ b/_posts/Analysis/2018-12-17-DOMCSSOMOptimization.html
@@ -78,7 +78,6 @@ posting한곳: Posting <blockquote><p class="posting">포스팅 </p></blockquote
 </br>
 </br>
 <pre><code>
-<html>
   <head>
     <meta name="viewport" content="width=device-width,initial-scale=1">
     <link href="style.css" rel="stylesheet">
@@ -88,7 +87,7 @@ posting한곳: Posting <blockquote><p class="posting">포스팅 </p></blockquote
     <p>Hello <span>web performance</span> students!</p>
     <div><img src="awesome-photo.jpg"></div>
   </body>
-</html>
+</code></pre>
 </br>
 </br>
 가장 단순한 경우인 몇몇 텍스트와 하나의 이미지만 포함하는 일반 HTML 페이지부터 
