--- a/_posts/Analysis/2018-12-17-DOMCSSOMOptimization.html
+++ b/_posts/Analysis/2018-12-17-DOMCSSOMOptimization.html
@@ -80,17 +80,17 @@ posting한곳: Posting <blockquote><p class="posting">포스팅 </p></blockquote
 </br>
 </br>
 <pre><code>
-<!--
-  <head>
-    <meta name="viewport" content="width=device-width,initial-scale=1">
-    <link href="style.css" rel="stylesheet">
-    <title>Critical Path</title>
-  </head>
-  <body>
-    <p>Hello <span>web performance</span> students!</p>
-    <div><img src="awesome-photo.jpg"></div>
-  </body>
--->
+html
+  head
+    meta name="viewport" content="width=device-width,initial-scale=1"
+    link href="style.css" rel="stylesheet"
+    title Critical Path /title
+  /head
+  body
+    p Hello span web performance /span  students! /p
+    div img src="awesome-photo.jpg" /div
+  /body
+/html
 </code></pre>
 </br>
 </br>
