Update and rename 2018-12-17-DOMCSSOMOptimization.html to 2018-12-17-DOMCSSOMJavaScriptOptimization.html

--- a/_posts/Analysis/2018-12-17-DOMCSSOMJavaScriptOptimization.html
+++ b/_posts/Analysis/2018-12-17-DOMCSSOMJavaScriptOptimization.html
@@ -1,6 +1,6 @@
 ---
 layout: post
-title: DOM, CSSOM Optimization
+title: DOM, CSSOM, JavaScript Optimization
 meta: Compare
 category: ComparativeAnalysis
 comments: true
