Update and rename 2018-12-13-Tree,BinaryTree.html to 2019-01-09-Tree,BinaryTree.html

--- a/_posts/Data structure/2019-01-09-Tree,BinaryTree.html
+++ b/_posts/Data structure/2019-01-09-Tree,BinaryTree.html
@@ -71,7 +71,10 @@ posting한곳: Posting <blockquote><p class="posting">포스팅 </p></blockquote
 	<blockquote><p class="posting">포스팅 </p></blockquote>
 <h2 class="BasicFontSet">concepts</h2>
 	트리는 그 모양이 뒤집어 놓은 나무와 같다고 해서 이런 이름이 붙었습니다. 예컨대 다음 그림과 같습니다.</br>
-<그림 1.></br>
+      <p class="Imgtext">
+          <img src="/asset/DataStructure/Tree/Tree1.png" class="concept"></br>
+          <내용></br>
+      </p>
 	위 그림에서 검정색 동그라미를 노드(node)라고 합니다. 
 	보통 데이터가 여기에 담깁니다. 노드와 노드 사이를 이어주는 선을 엣지(edge)라고 합니다. 
 	노드와의 관계를 표시합니다.</br>
