Update and rename aa to 2019-01-11-Kernel.html

--- a/_posts/OperatingSystem/Kernel/2019-01-11-Kernel.html
+++ b/_posts/OperatingSystem/Kernel/2019-01-11-Kernel.html
@@ -69,6 +69,38 @@ posting한곳: Posting <blockquote><p class="posting">포스팅 </p></blockquote
         {% endfor %}
      </a>
 	<blockquote><p class="posting">포스팅 </p></blockquote>
+      <p class="Imgtext">
+          <img src="/asset/OperatingSystem/Kernel/Kernel1.PNG" class="concept"></br>
+          <내용></br>
+      </p>
+      <p class="Imgtext">
+          <img src="/asset/OperatingSystem/Kernel/Kernel2.PNG" class="concept"></br>
+          <내용></br>
+      </p>
+      <p class="Imgtext">
+          <img src="/asset/OperatingSystem/Kernel/Kernel3.PNG" class="concept"></br>
+          <내용></br>
+      </p>
+      <p class="Imgtext">
+          <img src="/asset/OperatingSystem/Kernel/Kernel4.png" class="concept"></br>
+          <내용></br>
+      </p>
+      <p class="Imgtext">
+          <img src="/asset/OperatingSystem/Kernel/Kernel5.jpg" class="concept"></br>
+          <내용></br>
+      </p>
+      <p class="Imgtext">
+          <img src="/asset/OperatingSystem/Kernel/Kernel6.gif" class="concept"></br>
+          <내용></br>
+      </p>
+      <p class="Imgtext">
+          <img src="/asset/OperatingSystem/Kernel/Kernel7.gif" class="concept"></br>
+          <내용></br>
+      </p>
+       <p class="Imgtext">
+          <img src="/asset/OperatingSystem/Kernel/Kernel8.gif" class="concept"></br>
+          <내용></br>
+      </p>     
 	<blockquote><p class="Reference">가져온곳: <a class="Reference"> 
   http://mintnlatte.tistory.com/24?category=429175</br>
   https://docs.huihoo.com/linux/kernel/a1/index.html</br>
