--- a/contents/projects/index.html
+++ b/contents/projects/index.html
@@ -51,7 +51,7 @@ comments: false
             
             <h2 id="IoT">IoT</h2>
             <h4>
-            {% for news in site.categories.jekyll %}
+            {% for news in site.categories.IoT %}
               <div class="square">
                 <div class="circle"></div><a class="custom2" href="{{ news.url }}">{{ news.title }}</a>
               </div><br>
