--- a/contents/projects/index.html
+++ b/contents/projects/index.html
@@ -54,7 +54,7 @@ comments: false
             {% for news in site.categories.IoT %}
               <div class="square">
                 <div class="circle"></div><a class="custom2" href="{{ news.url }}">{{ news.title }}</a>
-              </div><br>
+              </div>
             {% endfor %}
             </h4>
             
